src/test/deca/context/invalid/expr_cast_float_to_void.deca
// Test of the rule (3.39) : can't cast float to void.

{
	void var1;
	float var2;
	var1 = (void)(var2);
}

// Résultat :
//# a
